--- a/qanda/templates/commons/navbar.html
+++ b/qanda/templates/commons/navbar.html
@@ -147,24 +147,21 @@
                     </li>
                     <!-- User Account Menu -->
                     <li class="dropdown user user-menu">
-                        <!-- Menu Toggle Button -->
+
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            <!-- The user image in the navbar-->
-                            <img src="../../dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
-                            <!-- hidden-xs hides the username on small devices so only the image appears. -->
-                            <span class="hidden-xs">Alexander Pierce</span>
+
+                            <img src="https://i.ytimg.com/vi/rFYgVyVHB2I/hqdefault_live.jpg" class="user-image" alt="User Image">
+                            <span class="hidden-xs">{{ user.last_name }}</span>
                         </a>
                         <ul class="dropdown-menu">
-                            <!-- The user image in the menu -->
                             <li class="user-header">
-                                <img src="../../dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                                <img src="https://i.ytimg.com/vi/rFYgVyVHB2I/hqdefault_live.jpg" class="img-circle" alt="User Image">
 
                                 <p>
-                                    Alexander Pierce - Web Developer
-                                    <small>Member since Nov. 2012</small>
+                                    {{ user.last_name }}
+                                    <small>{{ user.profile.title }}</small>
                                 </p>
                             </li>
-                            <!-- Menu Body -->
                             <li class="user-body">
                                 <div class="row">
                                     <div class="col-xs-4 text-center">
@@ -177,9 +174,8 @@
                                         <a href="#">Friends</a>
                                     </div>
                                 </div>
-                                <!-- /.row -->
                             </li>
-                            <!-- Menu Footer-->
+
                             <li class="user-footer">
                                 <div class="pull-left">
                                     <a href="#" class="btn btn-default btn-flat">Profile</a>
